syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

message UnsetKycPassedTransactionData {
    bytes address = 1; // Address
}
